--- a/_config.yml
+++ b/_config.yml
@@ -8,23 +8,19 @@ encoding: UTF-8
 
 
 # Hyde theme settings
-remote_theme: poole/hyde@v2.1.0
-sidebar_sticky: true
+theme: jekyll-theme-minimal
 
 # Custom CSS
 custom_css: /assets/css/custom.css
-favicon: /assets/favicon.ico
 
 # Build settings
 markdown: kramdown
 highlighter: rouge
 permalink: pretty
-paginate: 5
+#paginate: 5
 plugins:
-  - jekyll-paginate
   - jekyll-gist
   - jekyll-seo-tag
-  - jekyll-remote-theme
 
 # Author information
 author:
