--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,42 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: LAI Protocol
-tagline: 'LAI Protocol Foundation'
-description: 'Official website of the LAI Protocol Foundation'
-url: https://laiprotocol.org
-baseurl: ''
-encoding: UTF-8
-
-
-# Hyde theme settings
-theme: jekyll-theme-minimal
-
-# Custom CSS
-custom_css: /assets/css/custom.css
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: LAI protocol
+subtitle: "A protocol reducing noise in large language models"
+email: contact@laiprotocol.org
+description: >- # this means to ignore newlines until "baseurl:"
+  The LAI protocol is a method for reducing noise in large language models 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: laiprotocol
+github_username: zapodot
 
 # Build settings
 markdown: kramdown
-highlighter: rouge
-permalink: pretty
-#paginate: 5
+theme: minima
 plugins:
-  - jekyll-gist
-  - jekyll-seo-tag
+- jekyll-feed
 
-# Author information
-author:
-  name: 'LAI Protocol Foundation'
-
-# Navigation
-#pages_list:
-#  About: '/about/'
-#  Blog: '/blog/'
-#  Contact: '/contact/'
-
-# Custom variables
-version: 1.0.0
-github:
-  repo: https://github.com/laiprotocol
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
